Label [FIX] Fixes some weird alignments with addons

--- a/src/core/elements/_label.less
+++ b/src/core/elements/_label.less
@@ -57,7 +57,6 @@
 		display: inline-block;
 		vertical-align: top;
 		background: rgba(0, 0, 0, 0.2);
-		height: 1em + 2 * @v-padding;
 		padding: @v-padding @h-padding;
 		margin: -@v-padding @h-padding -@v-padding -@h-padding;
 		&[class*="right addon"] {
